--- a/main/style.css
+++ b/main/style.css
@@ -21,21 +21,21 @@ header {
     align-items: center;
 }
 
-.nav-links {
+.navigation {
     list-style: none;
     display: flex;
     gap: 20px;
     margin: 0;
 }
 
-.nav-links a {
+.navigation a {
     text-decoration: none;
     color: hsl(0, 0%, 8%);
     padding: 10px 0;
     font-weight: 500;
 }
 
-.nav-links .dropdown {
+.navigation .dropdown {
     position: relative;
 }
 
@@ -183,7 +183,7 @@ header {
         flex-direction: column;
         align-items: flex-start;
     }
-    .nav-links {
+    .navigation {
         flex-direction: column;
         gap: 10px;
     }
